--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  /*max-width: 1280px;*/
   margin: 0 auto;
   padding: 1rem;
   text-align: center;
@@ -53,4 +53,10 @@
   stroke-width: 1px;
   opacity: 1;
   /*marker-end: url(#end-arrow);*/
+}
+
+.svg-div {
+  display: inline-block;
+  margin: 10px;
+  /*border: 1px solid black;*/
 }
