--- a/src/components/Legend/index.css
+++ b/src/components/Legend/index.css
@@ -1,9 +1,8 @@
-#legend {
+.legend {
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     left: 0;
     background-color: rgba(240,248,255, 0.5);
-
     padding: 5px 0 0 0;
 }
 
@@ -17,7 +16,7 @@
     fill: rgb(51, 51, 51);
 }
 
-#title-div {
+.title-div {
     height: 16px;
     width: 80px;
     position: absolute;
