--- a/src/components/Panel/index.css
+++ b/src/components/Panel/index.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     justify-content: center;
-    height: 40px;
+    height: 80px;
     margin-top: 15px;
 
     .panel-popover {
@@ -22,5 +22,8 @@
         right: 0;
         bottom: 0;
         left: 0;
+    }
+    .panel-button {
+        align-self: center;
     }
 }
